# FonoGame

./: .gitignore  CMakeLists.txt  README.md  dw.py  juego.out
include/: AudioIA.h  Graficos.h  Jugador.h  LogicaJuego.h  Mapa.h  Pokedex.h
src/: AudioIA.cpp  Graficos.cpp  Jugador.cpp  LogicaJuego.cpp  Mapa.cpp  Pokedex.cpp  main.cpp
